<resources>
    <string name="app_name">Reach</string>
    <string name="invalid_username">Username Empty</string>
    <string name="invalid_password">Password empty</string>
    <string name="invalid_login">Login failed</string>
    <string name="title_activity_main2">Reach</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
