<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="Home" />
        <item
            android:id="@+id/nav_companies"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Companies" />
        <item
            android:id="@+id/nav_purchaseOrder"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Purchase Order" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_manage"
            android:title="About Us" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
